Add diffusion library with wrapped functions to prevent printing to console and break UI.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ target_include_directories(dmon
 )
 
 target_link_libraries(dmon
-  PRIVATE libdiffusion.a
+  PRIVATE libdiffusion_exp.a
   PRIVATE pcre
   PRIVATE backtrace
   PRIVATE OpenSSL::SSL
@@ -123,9 +123,6 @@ target_link_libraries(dmon
   PRIVATE ftxui::component
   PRIVATE spdlog::spdlog
   PRIVATE clip
-  #PRIVATE apr-1
-  #PRIVATE Boost::system
-
 )
 
 set_target_properties(dmon PROPERTIES CXX_STANDARD 17)
